--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -8,6 +8,13 @@ body {
     height: 100%;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    color: #3B4B5E;
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    line-height: 1.3;
+}
+
 
 /*Navigation Header - Start*/
 
@@ -44,7 +51,7 @@ body {
 }
 
 .gutter-top {
-    padding-top: 14.375rem;
+    padding-top: 5rem;
 }
 
 .js-parallax {
@@ -92,7 +99,7 @@ body {
 
 .header__left {
     display: flex;
-    align-items: start;
+    align-items: flex-start;
     flex: 0 0 50%;
     padding-right: 1.875rem;
     position: relative;
@@ -260,7 +267,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .header__right {
     display: flex;
-    align-items: start;
+    align-items: flex-start;
     flex: 0 0 50%;
     padding-left: 1.875rem;
 }
@@ -317,14 +324,14 @@ h1, h2, h3, h4, h5, h6 {
 
 @media (min-width: 768px) {
 .col-md-12 {
-    -ms-flex: 0 0 100%;
+    /* -ms-flex: 0 0 100%; */
     /* flex: 0 0 100%; */
     max-width: 100%;
 }
 }
 
 .col-12 {
-    -ms-flex: 0 0 100%;
+    /* -ms-flex: 0 0 100%; */
     /* flex: 0 0 100%; */
     max-width: 100%;
 }
@@ -556,14 +563,14 @@ a {
 
 @media (min-width: 768px) {
 .col-md-12 {
-    -ms-flex: 0 0 100%;
+    /* -ms-flex: 0 0 100%; */
     /* flex: 0 0 100%; */
     max-width: 100%;
 }
 }
 
 .col-12 {
-    -ms-flex: 0 0 100%;
+    /* -ms-flex: 0 0 100%; */
     /* flex: 0 0 100%; */
     max-width: 100%;
 }
