--- a/src/components/Sidebar/index.css
+++ b/src/components/Sidebar/index.css
@@ -2,3 +2,34 @@
   background-color: #2E2F36;
   color: #AEB0B8;
 }
+
+@media only screen and (max-width: 580px) {
+  .sidebar {
+    border-bottom: 0 !important;
+    border-radius: 0 !important;
+    box-shadow: 0px 20px 40px rgb(103 118 128 / 20%) !important;
+    padding: 0.5rem 0.9375rem !important;
+    position: fixed !important;
+    bottom: 0 !important;
+    left: 0 !important;
+    width: 100% !important;
+    z-index: 10 !important;
+  }
+  .nav__item {
+    height: auto !important;
+  }
+  .nav__item a.active {
+    background-image: none !important;
+    box-shadow: none !important;
+    color: #0D86FF !important;
+  }
+  .nav__item a {
+    background-color: transparent !important;
+    border-radius: 1rem !important;
+    font-size: 11px !important;
+  }
+  .nav__item a i {
+    font-size: 1rem !important;
+    margin-bottom: 0.3rem !important;
+  }
+}
