--- a/src/modules/works/index.css
+++ b/src/modules/works/index.css
@@ -1,16 +1,116 @@
 
-.cover:hover {
-  transform: scale(1.3);
+
+@media only screen and (max-width: 768px){
+.select ul li a {
+    color: #5E6E80;
+    text-decoration: none;
+}
 }
 
 @media only screen and (max-width: 768px){
-.select .placeholder {
-    cursor: pointer;
+.select ul li a {
+    color: #AEB0B8;
+}
+}
+
+@media only screen and (max-width: 768px){
+.select ul li {
     display: block;
-    padding: 0.5rem 0;
-    position: relative;
+    text-align: left;
+    padding: 0.3125rem 1.25rem 0.1875rem;
+    color: #5E6E80;
+    cursor: pointer;
+}
+}
+
+@media only screen and (max-width: 768px){
+.select ul li {
+    color: #AEB0B8;
+}
+}
+
+@media only screen and (max-width: 768px){
+.select ul li:first-child {
+    display: none;
+}
+}
+
+@media only screen and (max-width: 768px){
+.select ul {
+    background-color: #fff;
+    box-shadow: 0 0.625rem 3.75rem rgb(141 153 166 / 25%);
+    border-radius: 20px;
+    display: none;
+    max-height: 37.5rem;
+    overflow: hidden;
+    overflow-y: auto;
+    padding: 0.625rem 0;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    z-index: 100;
+}
+}
+
+@media only screen and (max-width: 768px){
+.select ul {
+    background-color: #2E2F36;
+    box-shadow: 0 0.625rem 3.75rem rgb(0 0 0 / 50%);
+}
+}
+
+@media only screen and (max-width: 768px){
+.select .placeholder::before {
+    position: absolute;
+    top: 50%;
+    right: 0.125rem;
+    transform: translateY(-50%);
+    font-family: 'Font Awesome';
+    content: '\f107';
     z-index: 1;
 }
+}
+
+.select .placeholder {
+  display: none;
+}
+
+@media only screen and (max-width: 768px){
+  .select .placeholder {
+      cursor: pointer;
+      display: block;
+      padding: 0.5rem 0;
+      position: relative;
+      z-index: 1;
+  }
+  }
+
+@media only screen and (max-width: 768px){
+.select {
+    background-color: #F7F9FA;
+    border-radius: 1.25rem;
+    display: block;
+    margin-bottom: 2rem;
+    padding: 0.25rem 1.1875rem 0.1875rem 1.25rem;
+    position: relative;
+    vertical-align: middle;
+    text-align: left;
+    user-select: none;
+    width: 100%;
+    -webkit-touch-callout: none;
+    z-index: 2;
+}
+}
+
+@media only screen and (max-width: 768px){
+.select {
+    background-color: #2E2F36;
+}
+}
+
+.cover:hover {
+  transform: scale(1.3);
 }
 
 @media only screen and (min-width: 769px){
@@ -76,10 +176,6 @@
   }
   }
 
-.select .placeholder {
-  display: none;
-}
-
 .pb-0, .py-0 {
   padding-bottom: 0!important;
 }
@@ -139,10 +235,6 @@ figure {
   margin: 0 0 1rem;
 }
 
-article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
-  display: block;
-}
-
 .gallery-grid__image-wrap {
   border-radius: 14px;
   display: block;
@@ -167,11 +259,6 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
   cursor: pointer;
   cursor: zoom-in;
   transition: transform .3s cubic-bezier(.2,0,.2,1);
-}
-
-
-article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
-  display: block;
 }
 
 .gallery-grid__title {
