--- a/src/modules/blog/index.css
+++ b/src/modules/blog/index.css
@@ -14,20 +14,6 @@
     margin-right: -0.9375rem;
 }
 
-@media only screen and (max-width: 785px){
-    .news-grid {
-        margin-left: 0;
-        margin-right: 0;
-    }
-}
-
-@media only screen and (max-width: 597px){
-    .news-grid {
-        margin-left: 0;
-        margin-right: 0;
-    }
-}
-
 .overlay {
     position: relative;
 }
@@ -37,12 +23,6 @@
     border-radius: 20px 20px 0 0;
     height: 14rem;
     position: relative;
-}
-
-@media only screen and (max-width: 1008px){
-.news-item__image-wrap {
-    height: 18rem;
-}
 }
 
 .overlay::before, .overlay--45::before, .overlay--80::before {
@@ -107,15 +87,6 @@ a:hover {
     text-decoration: underline;
 }
 
-.cover {
-    border-radius: 0.375rem;
-    object-fit: cover;
-    object-position: center;
-    font-family: 'object-fit: cover; object-position: center;';
-    height: 100%;
-    width: 100%;
-}
-
 .news-item__image-wrap::after {
     content: '';
     background-image: url(../../assets/img/icon-news.svg);
@@ -139,4 +110,51 @@ a:hover {
 
 .news-item p {
     line-height: 1.5;
+}
+
+.news-item {
+    background-color: #F7F9FA;
+    margin-bottom: 1.875rem;
+    margin-left: 0.9375rem;
+    margin-right: 0.9375rem;
+    padding: 0;
+    width: calc(50% - 30px);
+}
+
+@media only screen and (max-width: 991px){
+    .news-item {
+        margin-left: 0;
+        margin-right: 0;
+        width: 100%;
+    }
+    .news-item__image-wrap {
+        overflow: hidden;
+        border-radius: 20px 20px 0 0;
+        height: 18rem;
+        position: relative;
+    }
+    .news-grid {
+        margin-left: 0;
+        margin-right: 0;
+    }
+}
+
+.news-item {
+    background-color: #2E2F36;
+}
+
+@media (min-width: 768px){
+    #blog {
+        -ms-flex: 0 0 100%;
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+}
+
+@media (min-width: 992px){
+    #blog {
+        -ms-flex: 0 0 83.333333%;
+        flex: 0 0 83.333333%;
+        max-width: 83.333333%;
+    }
 }
