--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1,6 +1,49 @@
 
+.container {
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+@media only screen and (max-width: 580px){
+    body {
+        line-height: 1.6;
+    }
+}
+
+@media (min-width: 576px){
+    .container {
+        max-width: 540px;
+    }
+}
+
+@media (min-width: 768px){
+    .container {
+        max-width: 720px;
+    }
+}
+
+@media (min-width: 992px){
+    .container {
+        max-width: 960px;
+    }
+}
+
+@media (min-width: 1200px){
+    .container {
+        max-width: 1140px;
+    }
+}
+
 .gutter-top {
     padding-top: 5rem;
+}
+
+#root {
+    background-color: black;
+    height: 100%;
 }
 
 body {
@@ -21,11 +64,6 @@ body {
 
 .title--h6 {
     font-size: 0.875rem;
-}
-
-#root {
-    background-color: black;
-    height: 100%;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -50,19 +88,6 @@ h1, h2, h3, h4, h5, h6 {
     line-height: 1.3;
 }
 
-/*Navigation Header - Start*/
-
-.navigation {
-    text-align: center;
-    background: #262626;
-    overflow: hidden;
-    background-color: #333;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 100;
-}
-
 .MuiButton-label {
     color: white;
 }
@@ -71,187 +96,16 @@ h1, h2, h3, h4, h5, h6 {
     color: rgb(173, 169, 169);
 }
 
-
-/*Navigation Header - End*/
-
-/* Header Image - Start*/
-
-.header-image {
-    height: 19.75rem;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-}
-
 .js-parallax {
     background-image: url("/src/assets/img/image_header.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 50% 50%;
     height: 20rem;
-    /* margin-top: 2rem; */
-}
-
-
-/* Header Image - End*/
-
-
-/* Resume Profile - Start*/
-
-.header {
-    display: flex;
-    margin-bottom: 1.875rem;
-}
-
-.box {
-    background-color: #fff;
-    border-radius: 20px;
-    box-shadow: none;
-    padding: 1.875rem;
-    position: relative;
-    transition: box-shadow .3s ease-in-out;
 }
 
 .news-grid > * {
     min-width: 0;
-}
-
-.news-item {
-    background-color: #F7F9FA;
-    margin-bottom: 1.875rem;
-    margin-left: 0.9375rem;
-    margin-right: 0.9375rem;
-    padding: 0;
-    width: calc(50% - 30px);
-}
-
-
-/* Resume Profile - End*/
-
-@media only screen and (max-width: 991px) {
-    .header {
-        flex-direction: column;
-        padding: 0;
-    }
-}
-
-.header__left {
-    display: flex;
-    align-items: flex-start;
-    flex: 0 0 50%;
-    padding-right: 1.875rem;
-    position: relative;
-}
-
-@media only screen and (max-width: 991px){
-.header__left {
-    align-items: center;
-    flex-direction: column;
-    padding-right: 0;
-    padding-bottom: 1.25rem;
-    text-align: center;
-}
-}
-.header__left::before {
-    content: '';
-    background-color: #33363D;
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    height: 100%;
-    width: 1px;
-}
-
-@media only screen and (max-width: 1000px) {
-.header__left::before {
-    content: '';
-    background-color: #33363D;
-    position: absolute;
-    top: auto;
-    right: 0;
-    bottom: 0;
-    height: 1px;
-    width: 100%;
-}
-}
-
-
-@media only screen and (max-width: 941px){
-    .header__photo {
-        margin-top: -5rem;
-        margin-bottom: 1.25rem;
-    }
-}
-
-.header__photo {
-    background-color: #23262B;
-    border: 0.375rem solid black;
-    border-radius: 2.9375rem;
-    box-shadow: 0 0.5rem 1.5rem rgb(0 0 0 / 5%);
-    margin-top: -4.125rem;
-    height: 10.125rem;
-    overflow: hidden;
-    width: 10.125rem;
-}
-
-.header__photo-img {
-    height: 100%;
-    width: 100%;
-}
-
-.header__base-info {
-    /* margin-left: 1.5rem; */
-    margin: 0 0 0 1.5rem;
-}
-
-.container {
-    width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
-}
-
-@media (min-width: 593px) {
-    .container {
-        max-width: 540px;
-    }
-}
-
-@media (min-width: 785px) {
-    .container {
-        max-width: 720px;
-    }
-}
-
-@media (min-width: 1009px) {
-    .container {
-        max-width: 960px;
-    }
-}
-
-@media (min-width: 1217px) {
-    .container {
-        max-width: 1140px;
-    }
-}
-
-@media only screen and (max-width: 580px){
-.gutter-top {
-    padding-top: 5rem;
-}
-}
-
-@media only screen and (max-width: 991px) {
-.header__base-info {
-    margin-left: 0;
-}
-}
-
-.header__base-info .title {
-    margin-bottom: 0.125rem;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -268,56 +122,6 @@ h1, h2, h3, h4, h5, h6 {
     align-items: center;
 }
 
-@media only screen and (max-width: 991px){
-.header__social {
-    justify-content: center;
-}
-}
-
-.header__social {
-    display: flex;
-    align-items: center;
-    font-size: 1rem;
-    list-style: none;
-    margin-top: 0.5rem;
-    margin-bottom: 0;
-    padding: 0;
-}
-
-.header__social a:hover {
-    color: #0D86FF;
-}
-
-.header__social a {
-    color: #93959C;
-}
-
-.header__social li {
-    margin-right: 1rem;
-}
-
-.header__right {
-    display: flex;
-    align-items: flex-start;
-    flex: 0 0 50%;
-    padding-left: 1.875rem;
-}
-
-.header__contact {
-    color: #FCFCFC;
-}
-
-.header__contact {
-    list-style: none;
-    margin-bottom: 0;
-    width: 50%;
-}
-
-.header__contact li {
-    margin-bottom: 1rem;
-    word-break: break-all;
-}
-
 .overhead {
     color: #AEB0B8;
 }
@@ -329,20 +133,6 @@ h1, h2, h3, h4, h5, h6 {
     text-transform: uppercase;
 }
 
-@media only screen and (max-width: 580px){
-.header__right {
-    flex-direction: column;
-    padding-top: 1.5rem;
-}
-}
-
-@media only screen and (max-width: 974px) {
-.header__right {
-    padding-left: 0;
-    padding-top: 1.875rem;
-}
-}
-
 .row {
     display: -ms-flexbox;
     display: flex;
@@ -350,14 +140,6 @@ h1, h2, h3, h4, h5, h6 {
     flex-wrap: wrap;
     margin-right: -15px;
     margin-left: -15px;
-}
-
-@media (min-width: 992px) {
-.col-lg-2 {
-    -ms-flex: 0 0 16.666667%;
-    flex: 0 0 16.666667%;
-    max-width: 16.666667%;
-}
 }
 
 .col, .col-1, .col-10, .col-11, .col-12, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-auto, .col-lg, .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-auto, .col-md, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-auto, .col-sm, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-auto, .col-xl, .col-xl-1, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-auto {
@@ -384,61 +166,9 @@ aside {
     display: block;
 }
 
-.sidebar {
-    transition: all .3s ease-in-out;
-}
-
-.nav {
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    padding-left: 0;
-    margin-bottom: 0;
-    list-style: none;
-}
-
-@media only screen and (max-width: 1008px){
-    .nav {
-        justify-content: space-between;
-    }
-    }
-
 dl, ol, ul {
     margin-top: 0;
     margin-bottom: 1rem;
-}
-
-.nav__item {
-    display: block;
-    height: 6.25rem;
-    margin-bottom: 1rem;
-    text-align: center;
-    text-transform: uppercase;
-    width: 100%;
-}
-
-.nav__item a {
-    background-color: #F7F9FA;
-    border-radius: 1.25rem;
-    color: #5E6E80;
-    font-size: 0.875rem;
-    font-weight: 500;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-    position: relative;
-    text-decoration: none;
-    transition: all 0s;
-}
-
-.nav__item a.active {
-    background-image: linear-gradient(
-142.17deg, #0DA2FF 6.66%, #0055FF 91.48%);
-    box-shadow: inset -4px -4px 5px rgb(0 0 0 / 20%), inset 4px 4px 5px rgb(255 255 255 / 23%);
-    color: #FCFCFC;
 }
 
 a {
@@ -455,22 +185,6 @@ a {
     transition: color 0.3s cubic-bezier(0.72, 0.16, 0.345, 0.875);
 }
 
-.nav__item [class^="fas"], [class^="far"] {
-    display: block;
-    font-size: 2.25rem;
-    margin-top: 0.25rem;
-    margin-bottom: 0.5rem;
-}
-
-.nav__item a > * {
-    min-width: 0;
-}
-
-.nav__item a:hover {
-    color: #304CFD;
-    cursor: pointer;
-}
-
 [class^="icon-"], [class*=" icon-"] {
     font-family: 'icomoon' !important;
     font-style: normal;
@@ -485,135 +199,9 @@ a {
 .icon-user:before {
     content: "\ea12";
 }
-
-@media only screen and (max-width: 957px) {
-    .sidebar.is_stuck {
-        /* margin-top: 1.875rem; */
-        z-index: 1;
-    }
-}
-
-@media only screen and (max-width: 974px) {
-.sidebar {
-    border-color: #33363D;
-}
-}
-
-@media only screen and (max-width: 974px){
-.sidebar {
-    padding: 1.5rem;
-}
-}
-/* max-width: 1200px */
-@media only screen and (max-width: 1217px){
-.nav__item {
-    height: 5.125rem;
-}
-}
-
-@media only screen and (max-width: 1008px){
-    .nav__item {
-        margin-bottom: 0;
-        width: calc(20% - 1rem);
-    }
-    }
-
-@media only screen and (max-width: 1200px){
-.nav__item a {
-    border-radius: 1rem;
-    font-size: 0.75rem;
-}
-}
-
-.nav__item a {
-    background-color: #2E2F36;
-    color: #AEB0B8;
-}
-
-@media only screen and (max-width: 1200px){
-.nav__item [class^="icon-"] {
-    font-size: 1.75rem;
-    margin-bottom: 0.25rem;
-}
-}
-/* 974 */
 /*sidebar end*/
 
 /*Resume start*/
-
-@media only screen and (max-width: 991px) {
-.box-content {
-    border-radius: 0 0 20px 20px;
-}
-}
-
-@media only screen and (max-width: 1008px){
-.news-item {
-    margin-left: 0;
-    margin-right: 0;
-    width: 100%;
-}
-}
-
-@media only screen and (max-width: 1217px){
-.sidebar {
-    padding: 1.5rem;
-}
-}
-
-@media only screen and (max-width: 1008px) {
-    .sidebar {
-        border-bottom: 1px solid #33363D;
-        border-radius: 20px 20px 0 0;
-        padding: 1.875rem;
-    }
-    }
-
-    @media only screen and (max-width: 1008px){
-    .box-content {
-        border-radius: 0 0 20px 20px;
-    }
-}
-
-.box {
-    background-color: #23262B;
-    box-shadow: -4px 8px 24px rgb(0 0 0 / 7%);
-}
-
-.news-item {
-    background-color: #2E2F36;
-}
-
-.col-12 {
-    -ms-flex: 0 0 100%;
-    flex: 0 0 100%;
-    max-width: 100%;
-}
-
-/* min-width: 785px */
-@media (min-width: 785px) {
-    .col-md-12 {
-        -ms-flex: 0 0 100%;
-        flex: 0 0 100%;
-        max-width: 100%;
-    }
-}
-
-@media (min-width: 1009px) {
-    .col-lg-2 {
-        -ms-flex: 0 0 16.666667%;
-        flex: 0 0 16.666667%;
-        max-width: 16.666667%;
-    }
-}
-
-@media (min-width: 1009px) {
-    .col-lg-10 {
-        -ms-flex: 0 0 83.333333%;
-        flex: 0 0 83.333333%;
-        max-width: 83.333333%;
-    }
-}
 
 .pb-2, .py-2 {
     padding-bottom: .5rem!important;
@@ -818,21 +406,6 @@ img {
 
 
 /*MySkills end*/
-
-/*Footer start*/
-.footer {
-    color: #93959C;
-}
-
-.footer {
-    color: #8D99A6;
-    font-size: 0.875rem;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    text-align: center;
-}
-/*Footer end*/
-
 .title--h3 {
     font-size: 1.5rem;
     margin-bottom: 1rem;
