--- a/src/modules/works/index.css
+++ b/src/modules/works/index.css
@@ -1,217 +1,66 @@
-
-
-@media only screen and (max-width: 768px){
-.select ul li a {
-    color: #5E6E80;
-    text-decoration: none;
-}
-}
-
-@media only screen and (max-width: 768px){
-.select ul li a {
-    color: #AEB0B8;
-}
-}
-
-@media only screen and (max-width: 768px){
-.select ul li {
-    display: block;
-    text-align: left;
-    padding: 0.3125rem 1.25rem 0.1875rem;
-    color: #5E6E80;
-    cursor: pointer;
-}
-}
-
-@media only screen and (max-width: 768px){
-.select ul li {
-    color: #AEB0B8;
-}
-}
-
-@media only screen and (max-width: 768px){
-.select ul li:first-child {
-    display: none;
-}
-}
-
-@media only screen and (max-width: 768px){
-.select ul {
-    background-color: #fff;
-    box-shadow: 0 0.625rem 3.75rem rgb(141 153 166 / 25%);
-    border-radius: 20px;
-    display: none;
-    max-height: 37.5rem;
-    overflow: hidden;
-    overflow-y: auto;
-    padding: 0.625rem 0;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    z-index: 100;
-}
-}
-
-@media only screen and (max-width: 768px){
-.select ul {
-    background-color: #2E2F36;
-    box-shadow: 0 0.625rem 3.75rem rgb(0 0 0 / 50%);
-}
-}
-
-@media only screen and (max-width: 768px){
-.select .placeholder::before {
-    position: absolute;
-    top: 50%;
-    right: 0.125rem;
-    transform: translateY(-50%);
-    font-family: 'Font Awesome';
-    content: '\f107';
-    z-index: 1;
-}
-}
-
 .select .placeholder {
   display: none;
-}
-
-@media only screen and (max-width: 768px){
-  .select .placeholder {
-      cursor: pointer;
-      display: block;
-      padding: 0.5rem 0;
-      position: relative;
-      z-index: 1;
-  }
-  }
-
-@media only screen and (max-width: 768px){
-.select {
-    background-color: #F7F9FA;
-    border-radius: 1.25rem;
-    display: block;
-    margin-bottom: 2rem;
-    padding: 0.25rem 1.1875rem 0.1875rem 1.25rem;
-    position: relative;
-    vertical-align: middle;
-    text-align: left;
-    user-select: none;
-    width: 100%;
-    -webkit-touch-callout: none;
-    z-index: 2;
-}
-}
-
-@media only screen and (max-width: 768px){
-.select {
-    background-color: #2E2F36;
-}
 }
 
 .cover:hover {
   transform: scale(1.3);
 }
 
+.filter__item:last-child:before{
+  display: none;
+}
+
 @media only screen and (min-width: 769px){
   .filter__item.active a {
-      color: #3B4B5E;
+    color: #FCFCFC;
   }
-  }
-
-  @media only screen and (min-width: 769px){
-  .filter__item::before {
-      content: '';
-      background-color: #5E6E80;
-      border-radius: 0.1875rem;
-      position: absolute;
-      top: 0;
-      right: 0.375rem;
-      bottom: 0;
-      height: 0.25rem;
-      margin: auto;
-      width: 0.25rem;
-  }
-  }
-
-@media only screen and (min-width: 769px){
-  .filter__item:last-child:before {
-      content: none;
-  }
-}
-
-@media only screen and (min-width: 769px){
-  .filter__item::before {
-      background-color: #AEB0B8;
-  }
-}
-
-@media only screen and (min-width: 769px){
-  .filter__item {
-      padding-right: 1rem;
-      position: relative;
-  }
-  }
-
-@media only screen and (min-width: 769px){
-  .filter > * {
-      min-width: 0;
-  }
-  }
-
-@media only screen and (min-width: 769px){
-  .filter__item:first-child {
-      display: none;
-  }
-  }
-
-@media only screen and (min-width: 769px){
   .filter {
-      display: inline-flex;
-      flex-wrap: wrap;
-      font-size: 1rem;
-      list-style: none;
-      margin-bottom: 1.1875rem;
-      padding: 0;
+    display: inline-flex;
+    flex-wrap: wrap;
+    font-size: 1rem;
+    list-style: none;
+    margin-bottom: 1.1875rem;
+    padding: 0;
   }
+  .filter > * {
+    min-width: 0;
   }
-
-.pb-0, .py-0 {
-  padding-bottom: 0!important;
-}
-
-@media only screen and (min-width: 769px){
-  .filter__item.active a {
-      color: #FCFCFC;
+  .filter__item {
+    padding-right: 1rem;
+    position: relative;
   }
+  .filter__item:first-child {
+    display: none;
   }
-
-@media only screen and (min-width: 769px){
-.filter__item a {
-    color: rgba(94, 110, 128, 0.8);
-}
-}
-
-@media only screen and (min-width: 769px){
-  .filter__item a {
-      color: rgba(174, 176, 184, 0.8);
+  .filter__item:last-child {
+    padding-right: 0;
   }
+  .filter__item::before {
+    content: '';
+    background-color: #AEB0B8;
+    border-radius: 0.1875rem;
+    position: absolute;
+    top: 0;
+    right: 0.375rem;
+    bottom: 0;
+    height: 0.25rem;
+    margin: auto;
+    width: 0.25rem;
   }
-
-@media only screen and (min-width: 769px){
-.filter__link {
+  .filter__link {
     padding: 0 0.25rem;
     text-decoration: none;
     display: block;
     overflow: hidden;
     position: relative;
-}
+  }
+  .filter__item a {
+    color: rgba(174, 176, 184, 0.8);
+  }
 }
 
-@media only screen and (min-width: 769px){
-.filter__link:hover {
-    text-decoration: none;
-}
+.pb-0, .py-0 {
+  padding-bottom: 0!important;
 }
 
 .gallery-grid {
@@ -245,6 +94,15 @@ figure {
   z-index: 1;
 }
 
+.cover {
+  border-radius: 0.375rem;
+  object-fit: cover;
+  object-position: center;
+  font-family: 'object-fit: cover; object-position: center;';
+  height: 100%;
+  width: 100%;
+}
+
 .gallery-grid__image {
   border-radius: 10px;
   transform: scale3d(1, 1, 1);
@@ -271,3 +129,97 @@ figure {
   display: block;
 }
 
+@media only screen and (min-width: 768px){
+  #works {
+    -ms-flex: 0 0 100%;
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+}
+
+@media only screen and (min-width: 992px){
+  #works {
+    -ms-flex: 0 0 83.333333%;
+    flex: 0 0 83.333333%;
+    max-width: 83.333333%;
+  }
+}
+
+@media only screen and (max-width: 991px){
+  .gallery-grid__image-wrap {
+    height: 12.5rem;
+  }
+  .gallery-grid__item {
+    width: calc(50% - 16px);
+  }
+}
+
+@media only screen and (max-width: 768px){
+  .gallery-grid__image-wrap {
+    height: 18.125rem;
+  }
+  .gallery-grid__item {
+    width: 100%;
+  }
+  .select ul li a {
+    color: #AEB0B8;
+    text-decoration: none;
+  }
+  .select ul li {
+    text-align: left;
+    padding: 0.3125rem 1.25rem 0.1875rem;
+    color: #AEB0B8;
+    cursor: pointer;
+  }
+  .select ul li:first-child {
+    display: none;
+  }
+  .select ul {
+    background-color: #2E2F36;
+    box-shadow: 0 0.625rem 3.75rem rgb(0 0 0 / 50%);
+    border-radius: 20px;
+    display: none;
+    max-height: 37.5rem;
+    overflow: hidden;
+    overflow-y: auto;
+    padding: 0.625rem 0;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    z-index: 100;
+}
+  .select .placeholder:after {
+    position: absolute;
+    top: 50%;
+    right: 0.125rem;
+    transform: translateY(-50%);
+    font-family: 'icomoon';
+    content: '\e940';
+    z-index: 10;
+  }
+  .select .placeholder {
+    cursor: pointer;
+    display: block;
+    padding: 0.5rem 0;
+    position: relative;
+    z-index: 1;
+  }
+  .select {
+    background-color: #F7F9FA;
+    border-radius: 1.25rem;
+    display: block;
+    margin-bottom: 2rem;
+    padding: 0.25rem 1.1875rem 0.1875rem 1.25rem;
+    position: relative;
+    vertical-align: middle;
+    text-align: left;
+    user-select: none;
+    width: 100%;
+    -webkit-touch-callout: none;
+    z-index: 2;
+  }
+  .select {
+    background-color: #2E2F36;
+  }
+}
